--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,14 +1,16 @@
 mat-card {
-    background-color: #7b1fa2;
+    background-color: #9c27b0;
     cursor: pointer;
     width: 85%;
     height: 95%;
     margin: 30px
 }
 
-mat-card img{
-    object-fit: cover; /*this makes the image in src fit to the size specified below*/
-    width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+mat-card img {
+    object-fit: cover;
+    /*this makes the image in src fit to the size specified below*/
+    width: 100%;
+    /* Here you can use wherever you want to specify the width and also the height of the <img>*/
     aspect-ratio: 1/1;
     margin-bottom: 10px;
     border-radius: 5px;
