--- a/src/app/show-product/show-product.component.html
+++ b/src/app/show-product/show-product.component.html
@@ -26,6 +26,14 @@
                         <div class="row">
                             <p><b>Plataformas: </b>{{platforms(product)}}</p>
                         </div>
+
+                        <div class="row">
+                            <p><b>Categorias: </b>{{categories(product)}}</p>
+                        </div>
+
+                        <div class="row">
+                            <p><b>Restrição de Idade: </b>{{product?.pegi}}</p>
+                        </div>
                         
                         <div class="row">
                             <p><b>Descrição: </b>{{product?.description}}</p>
