--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 
     <div class="col">
         <button mat-button (click)="redirectCreateEvent()">
-            Create event
+            Criar evento
             <mat-icon>event</mat-icon>
         </button>
     </div>
