--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,8 +1,6 @@
 <mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1" (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
-
     <mat-card-content>
         <div class="row">
-
             <div class="col-4 d-flex justify-content-start">
                 <img *ngIf="data.img" src="{{data.img}}">
                 <img *ngIf="!data.img" src="assets/img/events/event_default.jpg">
@@ -10,28 +8,18 @@
 
             <div class="col">
                 <h1>{{data.title}}</h1>
-                <mat-divider inset></mat-divider>
-                <p>Localização: {{data.location}}</p>
-                <p *ngIf="data.game.length == 1">Jogo-alvo: {{data.game}}</p>
-                <p *ngIf="data.game.length > 1">Jogo-alvo: {{data.game}}</p>
-                <p>De {{data.start_date}} até {{data.end_date}}</p>
-                <p>Preço: {{data.price}}</p>
+                <mat-divider class="mb-2" inset></mat-divider>
+                <p>{{data.location}}</p>
+                <p *ngIf="data.game.length == 1">{{data.game}}</p>
+                <p *ngIf="data.game.length > 1">{{data.game}}</p>
+                <p><b>Início: </b> {{data.start_date}}<br><b>Fim: </b> {{data.end_date}}</p>
             </div>
 
-            <div class="col-2 d-flex justify-content-end">
-                <button mat-raised-button color="primary" style="margin-top:auto;">
-                    Comprar bilhete <mat-icon>local_activity </mat-icon> 
+            <div class="col-2 d-flex mt-auto justify-content-end">
+                <button mat-raised-button class="d-flex justify-content-center float-end" color="accent">
+                    {{data.price}} <mat-icon>local_activity </mat-icon> 
                 </button>
             </div>
         </div>
-
     </mat-card-content>
-
-    <mat-card-actions>
-        <div class="row">
-            <div class="col">
-                <button mat-button style="width: 100%;" (click)="open_event()">{{data.key_price}}</button>
-            </div>
-        </div>
-    </mat-card-actions>
 </mat-card>
