--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="col-2 d-flex mt-auto justify-content-end">
-                <button mat-raised-button class="d-flex justify-content-center float-end" color="accent">
+                <button (click)="addCart()" mat-raised-button class="d-flex justify-content-center float-end" color="accent">
                     {{data.price}} <mat-icon>local_activity </mat-icon> 
                 </button>
             </div>
