changed button colors

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -158,7 +158,7 @@
                     </div>
                 
                     <button class="mt-4" mat-button matStepperPrevious><mat-icon>navigate_before</mat-icon> Anterior</button>
-                    <button class="mt-4 mr-3" mat-raised-button color="primary" [disabled]="!infoForm.valid || !paymentForm.valid" (click)="checkoutDone()">Finalizar <mat-icon>check</mat-icon></button>
+                    <button class="mt-4 mr-3" mat-raised-button color="accent" [disabled]="!infoForm.valid || !paymentForm.valid" (click)="checkoutDone()">Finalizar <mat-icon>check</mat-icon></button>
                 </div>
             </mat-step>
         </mat-stepper>
