--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
             </div>
             
             <div class="row mt-4 mb-1 mx-auto">
-                <button mat-raised-button color="primary" type="submit">Entrar</button>
+                <button mat-raised-button color="accent" type="submit">Entrar</button>
             </div>
         </div>
     </form>
