--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="row mt-4 mb-1 mx-auto">
-                <button mat-raised-button color="primary" type="submit" mat-button>Registar</button>
+                <button mat-raised-button color="accent" type="submit" mat-button>Registar</button>
             </div>
         </div>
     </form>
