--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -4,7 +4,6 @@
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="col">
-
             <div class="row my-3 mx-auto">
                 <mat-form-field color="accent" appearance="outline">
                     <mat-label>Nome do evento</mat-label>
@@ -15,55 +14,39 @@
             </div>
 
             <div class="row my-3 mx-auto">
-                <mat-form-field color="accent" appearance="outline">
-                    <mat-label>Localização</mat-label>
-                    <input matInput formControlName="localizacao" required>
-                    <mat-error *ngIf="localizacao?.hasError('required')">Defina uma locailzação</mat-error>
-                    <mat-error *ngIf="form.controls['localizacao'].invalid && !localizacao?.hasError('required')">Insira uma Localização válida</mat-error>
-                </mat-form-field>
-            </div>
-
-            
-            <div class="row my-3 mx-auto">
                 <div class="col">
-                    <mat-form-field color="accent">
-                    <mat-label>Data do Evento</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                        <input matStartDate formControlName="dataI" placeholder="Start date">
-                        <input matEndDate formControlName="dataF" placeholder="End date">
-                    </mat-date-range-input>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                    <mat-error *ngIf="dataI?.hasError('required')">Defina uma data de inicio</mat-error>
-                    <mat-error *ngIf="dataF?.hasError('required')">Defina uma data de término</mat-error>
-                    <mat-error *ngIf="form.controls['dataI'].invalid && !dataI?.hasError('required')">Insira uma data de inicio válida</mat-error>
-                    <mat-error *ngIf="form.controls['dataF'].invalid && !dataF?.hasError('required')">Insira uma data de término válida</mat-error>
-
-                    </mat-form-field>
+                    <mat-select-country class="my-auto" color="accent" appearance="outline"
+                        label="País"
+                        formControlName="localizacao"
+                        [required]="true">
+                    </mat-select-country>
                 </div>
-                
-                <div class="col">
-                    <mat-form-field color="accent" appearance="outline" style="width:100%;">
-                        <mat-label>Hora</mat-label>
-                        <input matInput formControlName="hora" required>
-                        <mat-hint>HH:MM</mat-hint>
-                        <mat-error *ngIf="hora?.hasError('required')">Defina uma hora</mat-error>
-                        <mat-error *ngIf="form.controls['hora'].invalid && !hora?.hasError('required')">Introduza uma hora válida</mat-error>
-                    </mat-form-field>     
-                </div>
-
-            </div>
-
-            <div class="row my-3 mx-auto">
 
                 <div class="col">
                     <mat-form-field color="accent" appearance="outline">
-                        <mat-label>Descrição</mat-label>
-                        <input matInput formControlName="descricao" required>
-                        <mat-error *ngIf="descricao?.hasError('required')">Defina uma descriçao</mat-error>
-                        <mat-error *ngIf="form.controls['descricao'].invalid && !descricao?.hasError('required')">Insira uma descrição válida</mat-error>
+                        <mat-label>Cidade/Estado</mat-label>
+                        <input matInput formControlName="cidade" required>
+                        <!-- <mat-error *ngIf="preco?.hasError('required')">Defina um preço de entrada</mat-error>
+                        <mat-error *ngIf="form.controls['preço'].invalid && !preco?.hasError('required')">Preço invalido</mat-error> -->
                     </mat-form-field>
-                    
+                </div>
+            </div>
+            
+            <div class="row my-3 mx-auto">
+                <div class="col">
+                    <mat-form-field color="accent" appearance="outline">
+                        <mat-label>Data do Evento</mat-label>
+                        <mat-date-range-input [rangePicker]="picker">
+                            <input matStartDate formControlName="dataI" placeholder="Start date">
+                            <input matEndDate formControlName="dataF" placeholder="End date">
+                        </mat-date-range-input>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                        <mat-error *ngIf="dataI?.hasError('required')">Defina uma data de inicio</mat-error>
+                        <mat-error *ngIf="dataF?.hasError('required')">Defina uma data de término</mat-error>
+                        <mat-error *ngIf="form.controls['dataI'].invalid && !dataI?.hasError('required')">Insira uma data de inicio válida</mat-error>
+                        <mat-error *ngIf="form.controls['dataF'].invalid && !dataF?.hasError('required')">Insira uma data de término válida</mat-error>
+                    </mat-form-field>
                 </div>
 
                 <div class="col">
@@ -74,26 +57,37 @@
                         <mat-error *ngIf="form.controls['preço'].invalid && !preco?.hasError('required')">Preço invalido</mat-error>
                     </mat-form-field>
                 </div>
-
             </div>
 
             <div class="row my-3 mx-auto">
-                <mat-form-field color="accent" appearance="outline">
-                    <mat-label>Jogo</mat-label>
+                <div class="col">
+                    <mat-form-field color="accent" appearance="outline" style="width:100%;">
+                        <mat-label>Hora</mat-label>
+                        <input matInput formControlName="hora" required>
+                        <mat-hint>HH:MM</mat-hint>
+                        <mat-error *ngIf="hora?.hasError('required')">Defina uma hora</mat-error>
+                        <mat-error *ngIf="form.controls['hora'].invalid && !hora?.hasError('required')">Introduza uma hora válida</mat-error>
+                    </mat-form-field>     
+                </div>
 
-                    <input type="text" matInput [matAutocomplete]="auto2" (input)="onGameInput()" 
-                        (keydown.enter)="applyGame()" formControlName="jogo" >
-                        <mat-icon matSuffix style="transform: scale(1.1);">sports_esports</mat-icon>
-                        <mat-error *ngIf="jogo?.hasError('required')">Defina um Jogo</mat-error>
-                        <mat-error *ngIf="jogo?.invalid && !jogo?.hasError('required')">Jogo Inválido</mat-error>
-                    
-                        <mat-autocomplete #auto2="matAutocomplete">
-                            <mat-option *ngFor="let jogo of filteredOptions2 | async" [value]="jogo.title" multiple>
-                                {{ jogo.title }}
-                            </mat-option>
-                        </mat-autocomplete>
-                    <mat-error *ngIf="form.controls['jogo'].invalid">Selecione os jogos alvo do evento</mat-error>
-                </mat-form-field>
+                <div class="col">
+                    <mat-form-field color="accent" appearance="outline">
+                        <mat-label>Jogo</mat-label>
+    
+                        <input type="text" matInput [matAutocomplete]="auto2" (input)="onGameInput()" 
+                            (keydown.enter)="applyGame()" formControlName="jogo" >
+                            <mat-icon matSuffix style="transform: scale(1.1);">sports_esports</mat-icon>
+                            <mat-error *ngIf="jogo?.hasError('required')">Defina um Jogo</mat-error>
+                            <mat-error *ngIf="jogo?.invalid && !jogo?.hasError('required')">Jogo Inválido</mat-error>
+                        
+                            <mat-autocomplete #auto2="matAutocomplete">
+                                <mat-option *ngFor="let jogo of filteredOptions2 | async" [value]="jogo.title" multiple>
+                                    {{jogo.title}}
+                                </mat-option>
+                            </mat-autocomplete>
+                        <mat-error *ngIf="jogo?.invalid && !jogo?.hasError('required')">Selecione os jogos alvo do evento</mat-error>
+                    </mat-form-field>
+                </div>
             </div>
             
             <div class="row mt-4 mb-1 mx-auto">
