--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,14 +88,14 @@
 
     <div class="col">
         <mat-tab-group mat-align-tabs="center">
-            <mat-tab label="Games">
+            <mat-tab label="Jogos">
                 <mat-grid-list cols="4" rowHeight="1:1.3">
                     <mat-grid-tile *ngFor="let product of products">
                         <app-product [data]="product"></app-product>
                     </mat-grid-tile>
                 </mat-grid-list>
             </mat-tab>
-            <mat-tab label="Events">
+            <mat-tab label="Eventos">
                 <mat-grid-list class="mt-4" cols="1" rowHeight="5.5:1" [gutterSize]="'10px'">
                     <mat-grid-tile *ngFor="let event of events">
                         <app-event [data]="event"></app-event>
